# GodelEnv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  baseline.py  baseline_out.txt  baseline_results.json  blog.md  blog_draft.md  debug_providers.py  demo.py  demo_recursive.py  fix_emoji.py  hybrid_smoke.py  inference.py  openenv.yaml  pyproject.toml  pytest.ini  reevaluate.py  requirements.txt  research_eval.py  route_saved_candidate.py  self_improve.py  test_provider_config.py  train.py  train_colab.ipynb  train_colab.py  validate.sh
artifacts/: hybrid_coevolution_smoke.json  hybrid_smoke.json
artifacts/coevolution_smoke_v2/: challenge_archive.json  metrics.json  strategy_registry.json
artifacts/notebook_run/: metrics.json
artifacts/research_eval_live/: research_report.json
artifacts/research_eval_live/seed_7/: metrics.json  strategy_registry.json
artifacts/research_eval_live_final/: research_report.json
artifacts/research_eval_live_final/baseline_seed_101/: metrics.json
artifacts/research_eval_live_prompt2/: research_report.json
artifacts/research_eval_live_retry/: research_report.json
artifacts/research_eval_test/: research_report.json
artifacts/self_improve_test/: metrics.json  registry.json
artifacts/smoke_compact/: metrics.json
artifacts/smoke_compact2/: metrics.json
artifacts/smoke_compact3/: metrics.json
artifacts/test_run/: metrics.json
artifacts/training_run/: metrics.json  routing.json
assets/: metrics.json
dashboard/: app.js  index.html  style.css
docs/: COLAB_TRAINING.md
godel_engine/: __init__.py  adapter_routing.py  agent.py  async_utils.py  challenge_pool.py  client.py  code_eval.py  curriculum.py  deterministic_solver.py  environment.py  evaluator.py  evolution.py  guards.py  heuristic_policy.py  llm_json.py  models.py  openenv_environment.py  openenv_models.py  openenv_recursive.py  provider_runtime.py  recursive_environment.py  recursive_rollout.py  research_eval.py  rollout.py  scoring.py  self_improve.py  strategy_evaluator.py  symbolic_actions.py  training_rewards.py  training_support.py
godel_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
godel_engine/graders/: agent_grader.py
godel_engine/tasks/: __init__.py  adr_writing.py  alignment_qa.py  base.py  code_improvement.py  factual_qa.py  python_optimized.py  reasoning.py  strategy_optimization.py
server/: __init__.py  agent.py  app.py  deps.py  environment.py  evolution.py  requirements.txt
server/routers/: api.py
tests/: test_challenge_pool.py  test_deterministic_semantics.py  test_environment.py  test_llm_json.py  test_training_pipeline.py
(+67 files in other folders)
