[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godel_engine"
version = "0.3.0"
description = "A self-improving RL environment for strategy evolution."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "fastapi",
    "uvicorn",
    "websockets"
]
train = [
    "trl>=0.15",
    "transformers>=4.45",
    "datasets>=3.0",
    "torch>=2.1",
    "wandb",
    "unsloth",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["godel_engine"]
