[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godel_engine"
version = "2.0.0"
description = "A recursive self-improvement environment where agents mutate their own reasoning strategies."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "openenv>=0.4.1,<0.5",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "json-repair>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
train = [
    "trl>=0.26,<2",
    "transformers>=4.57,<5",
    "datasets>=3,<5",
    "torch>=2.3",
    "matplotlib>=3.8",
    "peft>=0.18,<1",
    "protobuf>=3.20,<7",
]
unsloth = [
    "unsloth",
]

[project.scripts]
server = "server.app:main"
godel-self-improve = "godel_engine.self_improve:main"
godel-research-eval = "godel_engine.research_eval:main"

[tool.setuptools.packages.find]
include = ["godel_engine*", "server*"]
